--- a/prortfolio/project portfolio/about.html
+++ b/prortfolio/project portfolio/about.html
@@ -3,18 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Nipun imesh</title>
+    <title>DILUM SHAMILKA</title>
+    <link rel="stylesheet" href="assets/styles/style1about.css">
 </head>
 
 <body>
     <!-- navigation bar-->
     <nav>
         <div>
-            <a>NIPUN</a>
+            <a>DILUM</a>
+            <br>
             <a>DEVELOPER/DESIGNR</a>
         </div>
         <div>
-            <a href="index.html">Home</a>
+            <a href="home.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -25,7 +27,7 @@
             <article>
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/WhatsApp%20Image%202025-10-06%20at%2010.27.30%20(1).jpeg">
                     </div>
                     <div>
                         <h1>
@@ -34,18 +36,15 @@
                     </div>
                 </div>
                 <div>
-                    <a>
-                        Hi, I'm nipun imesh currently studying at the IJSE Software Engineering Institute.
+                    <p>
+                        Hi, I'm dilum shamilka currently studying at the IJSE Software Engineering Institute.
                         I'm passionate about technology and dedicated to mastering the skills needed to become
                         a proficient software engineer. Throughout my studies, I have focused on learning
-                        Java and MySQL, which have equipped me with a strong foundation in programming and database
-                        management.
-                    </a>
+                        Java and MySQL, which have equipped me with a strong foundation in programming and database management.
+                    </p>
                 </div>
             </article>
-            <h1>
-                WHO I AM
-            </h1>
+
 
         </section>
         <!--SKILLS SECTION-->
@@ -56,7 +55,7 @@
             <article>
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/7e087ec355636ae1e83da6bae930b82d.png">
                     </div>
                     <div>
                         <a>
@@ -67,7 +66,7 @@
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/pngegg.png">
                     </div>
                     <div>
                         <a>
@@ -78,7 +77,7 @@
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/css3.svg">
                     </div>
                     <div>
                         <a>
@@ -89,7 +88,7 @@
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/html5.svg">
                     </div>
                     <div>
                         <a>
@@ -100,7 +99,7 @@
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/javascript.svg">
                     </div>
                     <div>
                         <a>
@@ -111,7 +110,7 @@
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/jquery.svg">
                     </div>
                     <div>
                         <a>
@@ -122,7 +121,7 @@
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/figma.svg">
                     </div>
                     <div>
                         <a>
@@ -138,56 +137,10 @@
                 WHAT ARE MY EDUCATION?
             </h1>
             <figure>
-                <div>
-                    <div>
-                        <img src="images/nipun.jpg" alt="nipun">
-                    </div>
-                    <div>
-                        <p>
-                            WP/KL/ St. Mary's Vidyalaya
-                        </p>
-                        <p>
-                            G.C.E. Ordinary Level (O/L)
-                            K/maggona santhmariya maha vidyalaya
-                            2015
-                        </p>
-                    </div>
-                </div>
 
                 <div>
                     <div>
-                        <img src="images/nipun.jpg" alt="nipun">
-                    </div>
-                    <div>
-                        <p>
-                            Dharmapala Maha Vidyalaya Katukurunda
-                        </p>
-                        <p>
-                            G.C.E. Advanced Level (A/L)
-                            K/Kathukurunda Dharmapala Maha Vidyalaya Kalutara
-                            2018
-                            Stream: ETC
-                        </p>
-                    </div>
-                </div>
-
-                <div>
-                    <div>
-                        <img src="images/nipun.jpg" alt="nipun">
-                    </div>
-                    <div>
-                        <p>
-                            ESOFT Metro Campus
-                        </p>
-                        <p>
-                            Successfully completed the English  program 
-                        </p>
-                    </div>
-                </div>
-
-                <div>
-                    <div>
-                        <img src="images/nipun.jpg" alt="nipun">
+                        <img src="assets/images/WhatsApp%20Image%202025-10-08%20at%2017.23.30_ee5bfb13.jpg">
                     </div>
                     <div>
                         <p>
@@ -213,15 +166,15 @@
                 <hr>
                 <figure>
                     <div>
-                        <P>NIPUN</P>
+                        <P>Dilum</P>
                         <P>DEVELOPER/DESIGNER</P>
-                        <P>© [2025] All rights reserved Crafted with care by Nipun Powered by innovation</P>
+                        <P>© [2025] All rights reserved Crafted with care by Dilum Powered by pahasara</P>
                     </div>
                     <div>
-                        IMESHNIPUN@GMAIL.COM
+                        dilumshamilka4@gmail.com
                     </div>
                     <div>
-                        <button>CONTACT</button>
+                        <a href="contact.html">CONTACT</a>
                     </div>
                 </figure>
             </article>
