--- a/prortfolio/project portfolio/contact.html
+++ b/prortfolio/project portfolio/contact.html
@@ -1,88 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Nipun imesh</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>DILUM SHAMILKA</title>
+    <link rel="stylesheet" href="assets/styles/style2contact.css">
+</head>
 
-    <body>
+<body>
 <!-- navigation bar-->
-    <nav>
-        <div>
-            <a>NIPUN</a>
-            <a>DEVELOPER/DESIGNR</a>
+<nav>
+    <div>
+        <a>DILUM</a>
+        <a>DEVELOPER/DESIGNR</a>
 
-        </div>
-        <div>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </div>
-    </nav>
-<!--SOSIAL MEDIA-->
-        <section>
-            <img src="images/nipun.jpg" alt="nipun">
-            <img src="images/nipun.jpg" alt="nipun">
-            <img src="images/nipun.jpg" alt="nipun">
-            <img src="images/nipun.jpg" alt="nipun">
-        </section>
+    </div>
+    <div>
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </div>
+</nav>
+<!--SOCIAL MEDIA-->
+<section class="social-links-section">
+    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+        <img src="assets/images/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+        <img src="assets/images/github.png" alt="github">
+    </a>
+    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+        <img src="assets/images/linkedin.png" alt="linkedin">
+    </a>
+    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+        <img src="assets/images/Screenshot%202025-10-08%20013025.png" alt="instagram">
+    </a>
+</section>
 <!--CONTACT SECTION-->
-        <section>
-            <article>
-                <figure>
-                    <a>
-                        Let’s Work Together !
-                    </a>
-                    <input type="search">
-                    <input type="search">
-                    <input type="search">
-                    <input type="search">
-                    <input type="button">
-                </figure>
-                <figure>
-                    <p>
-                        Address
-                    </p>
-                    <p>
-                        munhena road,maggona
-                    </p>
-                    <p>
-                        call
-                    </p>
-                    <p>
-                        078-178 903 5
-                    </p>
-                    <p>
-                        Email me
-                    </p>
-                    <p>
-                        Imeshnipun@GMAIL.COM
-                    </p>
-                </figure>
-            </article>
-        </section>       
+<section>
+    <article>
+        <figure>
+            <a href="#">
+                Let’s Work Together !
+            </a>
+
+            <label for="search1">Name:</label>
+            <input type="search" id="search1" placeholder="Enter your name">
+
+            <label for="search2">Email:</label>
+            <input type="search" id="search2" placeholder="Enter your email">
+
+            <label for="search3">Company:</label>
+            <input type="search" id="search3" placeholder="Enter company name (optional)">
+
+            <label for="search4">Project Details:</label>
+            <input type="search" id="search4" placeholder="Briefly describe your project">
+
+            <input type="button" value="Send Inquiry">
+        </figure>
+        <figure>
+            <p>
+                Address
+            </p>
+            <br>
+            <p>
+                63 mile post nuwaraeliya road welimada
+            </p>
+            <br>
+            <p>
+                call
+            </p>
+            <br>
+            <p>
+                 +94728262003
+            </p>
+            <br>
+            <p>
+                Email me
+            </p>
+            <br>
+            <p>
+                dilumshamilka4@gmail.com
+            </p>
+            <br>
+        </figure>
+    </article>
+</section>
 <!--FOOT SECTION-->
-        <footer>
-            <article>
-                <hr>
-                <figure>
-                    <h3>
-                        Let's make something amazing!
-                    </h3>
-                </figure>
-                <hr>
-                <figure>
-                    <div>
-                        <P>NIPUN</P>
-                        <P>DEVELOPER/DESIGNER</P>
-                        <P>© [2025] All rights reserved Crafted with care by Nipun Powered by innovation</P>
-                    </div>
-                    <div>
-                        IMESHNIPUN@GMAIL.COM
-                    </div> 
-                </figure>                  
-            </article>
-        </footer>
-    </body>
+<footer>
+    <article>
+        <hr>
+        <figure>
+            <h3>
+                Let's make something amazing!
+            </h3>
+        </figure>
+        <hr>
+        <figure>
+            <div>
+                <P>DILUM </P>
+                <P>DEVELOPER/DESIGNER</P>
+                <P>© [2025] All rights reserved Crafted with care by Dilum Powered by pahasara</P>
+            </div>
+            <div>
+                dilumshamilka4@gmail.com
+            </div>
+        </figure>
+    </article>
+</footer>
+</body>
 </html>>
