--- a/prortfolio/project portfolio/home.html
+++ b/prortfolio/project portfolio/home.html
@@ -581,7 +581,7 @@
     <section>
         <article>
             <p>
-                SERVICES
+             ACTIVITIES
             </p>
             <div>
                 <h1>
@@ -648,7 +648,7 @@
     <section>
         <article>
             <p>
-                SERVICES
+                GALLERY
             </p>
             <div>
                 <h1>
@@ -664,6 +664,7 @@
         </article>
         <article>
             <figure>
+
                 <div>
                     <p class="project-title">
                         PROJECT 1
@@ -672,10 +673,11 @@
                     <P>Detail</P>
                     <P>Detail</P>
                     <P>Detail</P>
-                    <a href="">see more -></a>
+                    <a href="https://github.com/udarasan/chatApplication">see more -></a>
                     <div>
                         <img src="assets/images/best-coding-language-for-games.jpg">
                     </div>
+
                     <div>
                         <p>PROJECT 1</p>
                     </div>
@@ -692,7 +694,7 @@
                     <P>Detail</P>
                     <P>Detail</P>
                     <P>Detail</P>
-                    <a href="">see more -></a>
+                    <a href="https://github.com/udarasan/chatApplication">see more -></a>
                     <div>
                         <img src="assets/images/best-coding-language-for-games.jpg">
                     </div>
@@ -712,7 +714,7 @@
                     <P>Detail</P>
                     <P>Detail</P>
                     <P>Detail</P>
-                    <a href="">see more -></a>
+                    <a href="https://github.com/udarasan/chatApplication">see more -></a>
                     <div>
                         <img src="assets/images/best-coding-language-for-games.jpg">
                     </div>
@@ -726,9 +728,7 @@
 
     </section>
     <section>
-        <p>
-            ASSIGNMENT
-        </p>
+
         <article>
             <figure>
                 <div>
@@ -736,7 +736,7 @@
                     <p> Detail</p>
                     <p> Detail </p>
                     <p> Detail</p>
-                    <a href="">see more -></a>
+                    <a href="https://github.com/udarasan/chatApplication">see more -></a>
                     <div>
                         ASSIGNMENT 1
                     </div>
@@ -749,7 +749,7 @@
                     <p> Detail</p>
                     <p> Detail </p>
                     <p> Detail</p>
-                    <a href="">see more -></a>
+                    <a href="https://github.com/udarasan/chatApplication">see more -></a>
                     <div>
                         ASSIGNMENT 2
                     </div>
@@ -762,7 +762,7 @@
                     <p> Detail</p>
                     <p> Detail </p>
                     <p> Detail</p>
-                    <a href="">see more -></a>
+                    <a href="https://github.com/udarasan/chatApplication">see more -></a>
                     <div>
                         ASSIGNMENT 3
                     </div>
