--- a/prortfolio/project portfolio/contact.html
+++ b/prortfolio/project portfolio/contact.html
@@ -23,16 +23,16 @@
 </nav>
 <!--SOCIAL MEDIA-->
 <section class="social-links-section">
-    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+    <a href="https://www.facebook.com/profile.php?id=100081284394455&mibextid=wwXIfr&mibextid=wwXIfr">
         <img src="assets/images/facebook.png" alt="Facebook">
     </a>
-    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+    <a href="https://github.com/dilum-shamilka/My-Portfolio">
         <img src="assets/images/github.png" alt="github">
     </a>
-    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+    <a href="https://brand.linkedin.com/downloads">
         <img src="assets/images/linkedin.png" alt="linkedin">
     </a>
-    <a href="https://gemini.google.com/app/2b480de96ccc8fb4">
+    <a href="https://www.instagram.com/dilum_pahasara?igsh=eDEybjR3NGlsZjBw&utm_source=qr">
         <img src="assets/images/Screenshot%202025-10-08%20013025.png" alt="instagram">
     </a>
 </section>
