--- a/prortfolio/project portfolio/contact.html
+++ b/prortfolio/project portfolio/contact.html
@@ -4,109 +4,178 @@
 <head>
     <meta charset="UTF-8">
     <title>DILUM SHAMILKA</title>
+    <style>
+        /* 1. Initial State: Set up for the fade-in animation for the main container */
+        #main-content {
+            transition: opacity 0.8s ease-in;
+            /* Starts hidden */
+            opacity: 0;
+        }
+
+        /* 2. Initial state for all sections: SLIDE-DOWN from the TOP and fade */
+        .reveal-section {
+            /* Initial position: 30px ABOVE its final spot */
+            transform: translateY(-30px);
+            /* Starts hidden */
+            opacity: 0;
+            /* Transition properties */
+            transition: opacity 0.7s ease-out, transform 0.7s ease-out;
+            /* Optimization hint */
+            will-change: opacity, transform;
+        }
+
+        /* 3. Final State: When the 'visible' class is added by JavaScript */
+        .reveal-section.visible {
+            /* Final position: back to normal (0 offset) */
+            transform: translateY(0);
+            /* Fully visible */
+            opacity: 1;
+        }
+    </style>
     <link rel="stylesheet" href="assets/styles/style2contact.css">
 </head>
 
 <body>
-<!-- navigation bar-->
-<nav>
-    <div>
-        <a>DILUM</a>
-        <a>DEVELOPER/DESIGNR</a>
+<div id="main-content">
+    <nav>
+        <div>
+            <a>DILUM</a>
+            <a>DEVELOPER/DESIGNR</a>
 
-    </div>
-    <div>
-        <a href="home.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
-    </div>
-</nav>
-<!--SOCIAL MEDIA-->
-<section class="social-links-section">
-    <a href="https://www.facebook.com/profile.php?id=100081284394455&mibextid=wwXIfr&mibextid=wwXIfr">
-        <img src="assets/images/facebook.png" alt="Facebook">
-    </a>
-    <a href="https://github.com/dilum-shamilka/My-Portfolio">
-        <img src="assets/images/github.png" alt="github">
-    </a>
-    <a href="https://brand.linkedin.com/downloads">
-        <img src="assets/images/linkedin.png" alt="linkedin">
-    </a>
-    <a href="https://www.instagram.com/dilum_pahasara?igsh=eDEybjR3NGlsZjBw&utm_source=qr">
-        <img src="assets/images/Screenshot%202025-10-08%20013025.png" alt="instagram">
-    </a>
-</section>
-<!--CONTACT SECTION-->
-<section>
-    <article>
-        <figure>
-            <a href="#">
-                Let’s Work Together !
-            </a>
+        </div>
+        <div>
+            <a href="home.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </nav>
+    <section class="social-links-section reveal-section">
+        <a href="https://www.facebook.com/profile.php?id=100081284394455&mibextid=wwXIfr&mibextid=wwXIfr">
+            <img src="assets/images/facebook.png" alt="Facebook">
+        </a>
+        <a href="https://github.com/dilum-shamilka/My-Portfolio">
+            <img src="assets/images/github.png" alt="github">
+        </a>
+        <a href="https://brand.linkedin.com/downloads">
+            <img src="assets/images/linkedin.png" alt="linkedin">
+        </a>
+        <a href="https://www.instagram.com/dilum_pahasara?igsh=eDEybjR3NGlsZjBw&utm_source=qr">
+            <img src="assets/images/Screenshot%202025-10-08%20013025.png" alt="instagram">
+        </a>
+    </section>
+    <section class="reveal-section">
+        <article>
+            <figure>
+                <a href="#">
+                    Let’s Work Together !
+                </a>
 
-            <label for="search1">Name:</label>
-            <input type="search" id="search1" placeholder="Enter your name">
+                <label for="search1">Name:</label>
+                <input type="search" id="search1" placeholder="Enter your name">
 
-            <label for="search2">Email:</label>
-            <input type="search" id="search2" placeholder="Enter your email">
+                <label for="search2">Email:</label>
+                <input type="search" id="search2" placeholder="Enter your email">
 
-            <label for="search3">Company:</label>
-            <input type="search" id="search3" placeholder="Enter company name (optional)">
+                <label for="search3">Company:</label>
+                <input type="search" id="search3" placeholder="Enter company name (optional)">
 
-            <label for="search4">Project Details:</label>
-            <input type="search" id="search4" placeholder="Briefly describe your project">
+                <label for="search4">Project Details:</label>
+                <input type="search" id="search4" placeholder="Briefly describe your project">
 
-            <input type="button" value="Send Inquiry">
-        </figure>
-        <figure>
-            <p>
-                Address
-            </p>
-            <br>
-            <p>
-                63 mile post nuwaraeliya road welimada
-            </p>
-            <br>
-            <p>
-                call
-            </p>
-            <br>
-            <p>
-                 +94728262003
-            </p>
-            <br>
-            <p>
-                Email me
-            </p>
-            <br>
-            <p>
-                dilumshamilka4@gmail.com
-            </p>
-            <br>
-        </figure>
-    </article>
-</section>
-<!--FOOT SECTION-->
-<footer>
-    <article>
-        <hr>
-        <figure>
-            <h3>
-                Let's make something amazing!
-            </h3>
-        </figure>
-        <hr>
-        <figure>
-            <div>
-                <P>DILUM </P>
-                <P>DEVELOPER/DESIGNER</P>
-                <P>© [2025] All rights reserved Crafted with care by Dilum Powered by pahasara</P>
-            </div>
-            <div>
-                dilumshamilka4@gmail.com
-            </div>
-        </figure>
-    </article>
-</footer>
+                <input type="button" value="Send Inquiry">
+            </figure>
+            <figure>
+                <p>
+                    Address
+                </p>
+                <br>
+                <p>
+                    63 mile post nuwaraeliya road welimada
+                </p>
+                <br>
+                <p>
+                    call
+                </p>
+                <br>
+                <p>
+                    +94728262003
+                </p>
+                <br>
+                <p>
+                    Email me
+                </p>
+                <br>
+                <p>
+                    dilumshamilka4@gmail.com
+                </p>
+                <br>
+            </figure>
+        </article>
+    </section>
+    <footer class="reveal-section">
+        <article>
+            <hr>
+            <figure>
+                <h3>
+                    Let's make something amazing!
+                </h3>
+            </figure>
+            <hr>
+            <figure>
+                <div>
+                    <P>DILUM </P>
+                    <P>DEVELOPER/DESIGNER</P>
+                    <P>© [2025] All rights reserved Crafted with care by Dilum Powered by pahasara</P>
+                </div>
+                <div>
+                    dilumshamilka4@gmail.com
+                </div>
+            </figure>
+        </article>
+    </footer>
+</div>
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        // Get all elements to be revealed
+        const sectionsToReveal = document.querySelectorAll('.reveal-section');
+        const mainContent = document.getElementById('main-content');
+
+        // 1. Initial Fade-in for the main content
+        if (mainContent) {
+            mainContent.style.opacity = '1';
+        }
+
+        // 2. Reveal the first section immediately (since it's likely visible on page load)
+        if (sectionsToReveal.length > 0) {
+            sectionsToReveal[0].classList.add('visible');
+        }
+
+        // 3. Setup the Intersection Observer for subsequent sections (starting from index 1)
+        const sectionsForObserver = Array.from(sectionsToReveal).slice(1);
+
+        // Configuration for the Intersection Observer
+        const observerOptions = {
+            // Trigger animation when the element is 100px before the bottom of the viewport
+            rootMargin: '0px 0px -100px 0px',
+            threshold: 0.1 // Triggers when 10% of the element is visible
+        };
+
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    // Add the 'visible' class to start the CSS transition (slide-down/fade-in)
+                    entry.target.classList.add('visible');
+                    // Stop observing the element once it has been revealed
+                    observer.unobserve(entry.target);
+                }
+            });
+        }, observerOptions);
+
+        // Start observing sections from the second one onwards
+        sectionsForObserver.forEach(section => {
+            observer.observe(section);
+        });
+    });
+</script>
 </body>
-</html>>
+</html>
